# robust-vision

./: .gitignore  CHANGES.md  LICENSE  README.md  evaluate_models.py  generate_submission.py  model_submission.py  plot_results.py  pyproject.toml  requirements.txt  submission.csv  train.py  weights.pth
conf/: config.yaml
results/SCE/: 20260301_130819_eval.txt
results/SCE + tent/: 20260301_130023_eval.txt
src/: adaptation.py  config.py  dataset.py  eval_pipeline.py  loss.py  main.py  model.py  pipeline.py  preprocess.py  run_eval.py  run_train.py  submit.py  task.py  train.py  train_pipeline.py  utils.py
submission/: model_submission.py  train.py
