[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robust-computer-vision"
version = "0.1.0"
description = "Robust computer vision under distribution shift and label noise"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.scripts]
robust-cv = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
